--- a/CustomerApi/CustomerApi.csproj
+++ b/CustomerApi/CustomerApi.csproj
@@ -8,5 +8,7 @@
     <PackageReference Include="AWSSDK.S3" Version="3.3.110.58" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.3.100.1" />
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="5.1.0" />
+    <PackageReference Include="Dapper" Version="2.0.78" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 </Project>
